[package]
name = "wahoo"
version = "0.1.0"
authors = ["tuckerrrrrrrrrrrr <tucker1014@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.8"
postgres = "0.17.2"
reqwest = "0.10"
serde = "1.0"
serde_json = "1.0"
select = "0.4.3"
regex = "1.3.6"
